Fixed styling bug in main page where map grows too large

--- a/css/main.css
+++ b/css/main.css
@@ -15,10 +15,10 @@
 	flex-direction: row;
 }
 
-#map {
+/* #map {
 	width: 100%;
-	height: 100%;
-}
+	height: 100%; 
+} */
 
 .leaflet-popup-container {
 	background-color: white;
