--- a/src/output.css
+++ b/src/output.css
@@ -671,6 +671,10 @@ video {
   height: 100vh;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -719,12 +723,12 @@ video {
   justify-content: space-between;
 }
 
-.overflow-hidden {
-  overflow: hidden;
-}
-
 .overflow-scroll {
   overflow: scroll;
+}
+
+.overflow-y-hidden {
+  overflow-y: hidden;
 }
 
 .rounded {
@@ -755,6 +759,11 @@ video {
 .border-red-700 {
   --tw-border-opacity: 1;
   border-color: rgb(185 28 28 / var(--tw-border-opacity));
+}
+
+.border-l-orange-400 {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(251 146 60 / var(--tw-border-opacity));
 }
 
 .bg-customLightGray {
@@ -850,6 +859,11 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -925,6 +939,8 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+/* Reset default margin and spacing */
+
 * {
   margin: 0px;
   padding: 0px;
@@ -937,10 +953,10 @@ video {
   flex-direction: row;
 }
 
-#map {
-  width: 100%;
-  height: 100%;
-}
+/* #map {
+	width: 100%;
+	height: 100%; 
+} */
 
 .leaflet-popup-container {
   background-color: white;
